User update view